fix for rounded submit button on iOS 12.1.3 safari 12

--- a/css/main.css
+++ b/css/main.css
@@ -227,9 +227,10 @@ p {
   flex: 1 1 20%;
   background: purple;
   color: white;
-  border-radius: 0;
+  border-radius: 0; /* iOS 12.1.3 safari 12 fix */
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   border: 1px solid purple;
   cursor: pointer;
+  -webkit-appearance: none; /* iOS 12.1.3 safari 12 fix */
 }
